Add user extension

--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,19 @@
     "require": {
         "robthree/twofactorauth": "^1.6"
     },
-    "license": "LGPL-3.0",
-    "autoload": {
-        "psr-4": {
-            "DieSchittigs\\TwoFactorAuth\\": "src/"
-        }
-    },
     "authors": [
         {
             "name": "Christopher Mühl",
             "email": "christopher@dieschittigs.de"
         }
     ],
+    "license": "LGPL-3.0",
+    "autoload": {
+        "psr-4": {
+            "DieSchittigs\\TwoFactorAuth\\": "src/"
+        }
+    },
     "extra": {
-     "contao-manager-plugin": "DieSchittigs\\TwoFactorAuthBundle\\ContaoManager\\Plugin"
+        "contao-manager-plugin": "DieSchittigs\\TwoFactorAuth\\ContaoManager\\Plugin"
     }
 }
