--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "dieschittigs/contao-tfa-bundle",
-    "description": "Adds two-factor authentication to Contao 4 backend users",
+    "description": "Adds two-factor-authentication to Contao 4 backend users",
     "type": "contao-bundle",
     "require": {
         "robthree/twofactorauth": "^1.6"
@@ -11,7 +11,7 @@
             "email": "christopher@dieschittigs.de"
         }
     ],
-    "license": "LGPL-3.0",
+    "license": "LGPL-3.0+",
     "autoload": {
         "psr-4": {
             "DieSchittigs\\TwoFactorAuth\\": "src/"
