Use new route for the form logout link

--- a/src/Resources/config/listener.yml
+++ b/src/Resources/config/listener.yml
@@ -8,6 +8,7 @@ services:
         class: DieSchittigs\TwoFactorAuth\EventListener\RequestListener
         arguments:
             - "@contao.framework"
+            - "@request_stack"
             - "@security.token_storage"
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: -10 }
